@@ -1,3 +1,6 @@
+05 February 2022 Petasis George <petasis@iit.demokritos.gr>:
+ * docker/docker-compose.yml: Maria DB & Mongo integration.
+
 04 February 2022 Petasis George <petasis@iit.demokritos.gr>:
  * backend-django/clarin_backend/utils.py: Fixes for dockerisation.
 
